# ampc-common

./: Cargo.toml  README.md  catalog-info.yaml  deny.toml  worker_pool_networking_design.md  worker_pool_setup.md
.github/workflows/: build-all-targets.yml  check-licenses.yaml  check-secrets.yml  doc.yml  key-manager-build-and-push.yml  lint-clippy.yaml  lint-rustfmt.yaml  relyance-sci.yml  run-unit-tests.yaml
ampc-actor-utils/: Cargo.toml
ampc-actor-utils/benches/: bit_inject.rs  msb_microbench.rs  reshare_mux.rs  udot_microbench.rs  vectored_write.rs
ampc-actor-utils/src/: constants.rs  fast_metrics.rs  lib.rs  sync.rs
ampc-actor-utils/src/execution/: local.rs  mod.rs  player.rs  scheduler.rs  session.rs
ampc-actor-utils/src/network/: README.md  config.rs  local.rs  mod.rs  value.rs
ampc-actor-utils/src/network/mpc/: local.rs  mod.rs  value.rs
ampc-actor-utils/src/network/mpc/handle/: README.md  config.rs  control_channel.rs  data.rs  mod.rs  network_handle.rs
ampc-actor-utils/src/network/mpc/handle/session/: mod.rs  multiplexer.rs
ampc-actor-utils/src/network/tcp/: config.rs  data.rs  handle.rs  mod.rs  peer_connector.rs  streams.rs  types.rs
ampc-actor-utils/src/network/tcp/connection/: client.rs  connection_state.rs  handshake.rs  listener.rs  mod.rs  server.rs
ampc-actor-utils/src/network/tcp/session/: multiplexer.rs
ampc-actor-utils/src/network/workpool/: ExampleUsage.md  README.md  mod.rs  payload.rs  value.rs
ampc-actor-utils/src/network/workpool/leader/: job_tracker.rs  leader_task.rs  mod.rs
ampc-actor-utils/src/network/workpool/worker/: mod.rs  worker_task.rs
ampc-actor-utils/src/protocol/: anon_stats.rs  binary.rs  fhd_ops.rs  min_round_robin.rs  mod.rs  msb_dealer_helpers.rs  msb_offline_randomness.rs  msb_preprocessing.rs  msb_preprocessing_additive.rs  nhd_ops.rs  ops.rs  prf.rs  rss5.rs  shuffle.rs  test_utils.rs
ampc-actor-utils/src/protocol/batched_msb/: batched_msb_extraction.rs  batched_preprocessing.rs  mod.rs
ampc-actor-utils/tests/: connection_integration.rs  control_channel.rs  workpool_integration.rs  workpool_reconnect.rs
ampc-anon-stats/: Cargo.toml
ampc-anon-stats/anon_stats_migrations/: 20251120133040_face_stats.down.sql  20251120133040_face_stats.up.sql  20251125160000_add_operation_columns.down.sql  20251125160000_add_operation_columns.up.sql  20260630120000_anon_stats_add_created_at.down.sql  20260630120000_anon_stats_add_created_at.up.sql  20260630120000_anon_stats_partition_retention.down.sql  20260630120000_anon_stats_partition_retention.up.sql  20260701000000_2d_di.down.sql  20260701000000_2d_di.up.sql  20260716120000_add_face_operation.down.sql  20260722000000_2d_di_created_at.down.sql  20260722000000_2d_di_created_at.up.sql  20260722000001_2d_di_created_at_index.down.sql  20260722000001_2d_di_created_at_index.up.sql  20260723120000_add_face_operation.up.sql
ampc-anon-stats/src/: lib.rs  types.rs
ampc-anon-stats/src/anon_stats/: buckets.rs  face.rs  iris_1d.rs  iris_2d.rs  mod.rs
ampc-anon-stats/src/server/: coordination.rs  health.rs  mod.rs  sync.rs
ampc-anon-stats/src/server/config/: mod.rs
ampc-anon-stats/src/store/: mod.rs  postgres.rs
ampc-networking/: Cargo.toml
ampc-networking/src/: lib.rs
ampc-secret-sharing/: Cargo.toml
ampc-secret-sharing/src/: face_vector.rs  galois.rs  galois64.rs  iris_vector.rs  lib.rs  vector.rs
ampc-secret-sharing/src/galois/: degree4.rs  mod.rs
ampc-secret-sharing/src/shares/: bit.rs  mod.rs  primefield.rs  ring48.rs  ring_impl.rs  share.rs  vecshare.rs  vecshare_bittranspose.rs
ampc-server-utils/: Cargo.toml
ampc-server-utils/src/: batch_sync.rs  config.rs  decryption.rs  lib.rs  profiling.rs  runtime_config.rs  server_coordination.rs  shutdown_handler.rs  sqs.rs  startup_sync.rs  statistics.rs  task_monitor.rs  validation.rs
key-manager/: Cargo.toml  Dockerfile  README.md
vector-mpc-5pc/: ANALYSIS.md  Cargo.toml  README.md
vector-mpc-5pc/src/: main.rs
