[package]
name = "ampc-anon-stats"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
bincode = { workspace = true }
siphasher = "1"
config = { version = "0.15.19", default-features = false, features = ["json"] }
tracing = { workspace = true }
clap = { version = "4.5.51", features = ["derive"] }
itertools = "0.14.0"

axum = "0.8.6"
rand = "0.8.5"
uuid = { version = "1.18.1", features = ["v4"] }
ampc-secret-sharing = { path = "../ampc-secret-sharing" }
ampc-actor-utils = { path = "../ampc-actor-utils" }
ampc-server-utils = { path = "../ampc-server-utils" }
tokio = "1.48.0"
futures-util = "0.3.31"
