[package]
name = "ampc-server-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []
profiling = ["dep:pprof"]

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sodiumoxide = { workspace = true }
zeroize = "1.8.1"
thiserror = "2.0"
pprof = { version = "0.15.0", features = ["flamegraph", "prost-codec"], optional = true }

[lib]
name = "ampc_server_utils"
path = "src/lib.rs"
