[package]
name = "vector-mpc-5pc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
# Byte-optimal ripple-carry MSB extraction for the 3PC pipelines, matching
# the adder used by the reference vector-mpc-poc. The default build keeps
# the lower-latency parallel-prefix adder that ampc-actor-utils ships with.
#
# Deliberately NOT enabled unconditionally: a hardwired dependency feature
# would unify into every workspace-wide build (`cargo test` at the root)
# and silently remove all test/compile coverage of the default adder that
# external consumers such as iris-mpc actually use.
ripple = ["ampc-actor-utils/ripple_carry_adder"]

[dependencies]
ampc-secret-sharing = { path = "../ampc-secret-sharing" }
ampc-actor-utils = { path = "../ampc-actor-utils" }
tokio = { workspace = true }
async-trait = "~0.1"
eyre = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "vector-mpc-5pc"
path = "src/main.rs"
